@@ -1,3 +1,8 @@
+2001-02-28  Andreas Jaeger  <aj@suse.de>
+
+	* elf64-x86-64.c (elf64_x86_64_relocate_section): Add relocation
+	to addend.
+
 2001-02-26  Andreas Jaeger  <aj@suse.de>
 
 	* elf64-x86-64.c (x86_64_elf_howto_table): Fix order of entries.
